refactor(*): 使用 Tailwind CSS 重构

--- a/src/css/fonts.less
+++ b/src/css/fonts.less
@@ -2,3 +2,7 @@
   font-family: merriweatherRegular;
   src: url("/public/fonts/Merriweather/Merriweather-Regular.ttf");
 }
+
+.mw-regular {
+  font-family: merriweatherRegular, serif;
+}
